content/docs/v1.0.5/guides/how-to-backup-a-s3-bucket/_index.md
---
date: "2025-09-04T06:20:40Z"
title: How to backup a S3 bucket?
last_reviewed: "2025-09-04"
last_reviewed_version: "v1.0.4"
summary: "Learn how to configure and use the Plakar S3 integration to back up an S3 bucket into a Kloset store. This tutorial covers installation, credential setup, bucket URL construction, and running backups."
---

*Last reviewed: {{<param "last_reviewed">}} / Plakar {{<param "last_reviewed_version">}}*


This tutorial explains how to configure the Plakar S3 source integration to back up an existing S3 bucket into an already configured Kloset store. You'll learn how to install the integration, set up your credentials, build the correct bucket URL for your provider, and run backups.

## 1. Install the S3 integration

Before using S3 as a source, you need to install the Plakar S3 integration.
You can do this in two ways:

**Option A — Install from pre-built packages**
(requires being logged in with `plakar login`)

```bash
plakar pkg add s3
```

**Option B — Build locally**
(requires the Go toolchain to be installed)

```bash
plakar pkg build s3
plakar pkg add ./s3_v1.0.0_darwin_arm64.ptar
```

> ⚠️ Adapt the filename to match the package file generated by `plakar pkg build`.

## 2. Get your bucket credentials

- Access Key ID
- Secret Access Key

## 3. Build your bucket URL

Most S3-compatible providers do **not** show you the full `s3://…` address in their web UI—you’ll need to construct it yourself based on your bucket name, host/region, and (sometimes) port or path.

You'll use this URL in the next step to configure your Plakar **s3 source**.

Depending on your provider, use one of these formats:

**AWS S3**
```bash
# Region-specific endpoint:
s3://s3.<REGION>.amazonaws.com/<BUCKET>
# Example:
s3://s3.us-east-1.amazonaws.com/mybucket
```

**MinIO**
```bash
# Custom host & port:
s3://<MINIO_HOST>:<PORT>/<BUCKET>
# Example:
s3://localhost:9000/mybucket
```

**Scaleway**
```bash
# Region-specific endpoint:
s3://s3.<REGION>.scw.cloud/<BUCKET>
# Example:
s3://s3.fr-par.scw.cloud/mybucket
```

**Backblaze**
```bash
# Region-specific endpoint:
s3://s3.<REGION>.backblazeb2.com/<BUCKET>
# Example:
s3://s3.us-west-001.backblazeb2.com/mybucket
```

**CleverCloud**
```bash
# Fixed endpoint for CleverCloud Cellar:
s3://cellar-c2.services.clever-cloud.com/<BUCKET>
# Example:
s3://cellar-c2.services.clever-cloud.com/mybucket
```

## 4. Configure the **s3 source**

```bash
# Add a store (name it anything — here we use "mys3")
plakar source add mys3 <YOUR_S3_URL> access_key=<YOUR_ACCESS_KEY_ID> secret_access_key=<YOUR_SECRET_ACCESS_KEY>

# If running MinIO locally without TLS:
plakar source set mys3 use_tls=false
```

## 5. Run your backup

Once your remote is configured, trigger a backup of your Kloset with:

```bash
plakar at @myrepo backup @mys3
```

This assumes you already have a Kloset named `@myrepo`. Creating it is outside the scope of this tutorial.